# penrose_config

./: Cargo.toml  README.md
scripts/: penrose-config-setup.sh
src/: hooks.rs  layouts.rs  lib.rs  main.rs
